more work on the pytables tutorial

--- a/lesson 4/Data storage - pytables.ipynb
+++ b/lesson 4/Data storage - pytables.ipynb
@@ -48,12 +48,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import tables as tbl"
+      "import tables as tbl\n",
+      "import pandas as pd\n",
+      "import numpy as np\n",
+      "from datetime import datetime"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -78,7 +81,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -127,7 +131,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -155,13 +160,14 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_table(group, table_name, descr='')\n",
+      "def get_table(group, table_name, descr=''):\n",
       "    try:\n",
       "        table = getattr(h5f.root.group_name, table_name)\n",
       "    except tbl.exceptions.NoSuchNodeError:\n",
@@ -173,24 +179,106 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "h5f = get_db('gps_db')\n",
+      "data_node = get_node(h5f, 'data')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "empty h5file created: gps_db\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Lets save the GPS data as found from the CSV file. Convert datetime object to UNIX time stamp"
+      "Lets save the GPS data as found from the CSV file. Convert datetime object to unix time stamp. There are two ways to do that, and one of them is wrong:\n",
+      "```\n",
+      "date = '20131211 18:29:30'\n",
+      "dt = datetime.strptime(date, \"%Y%m%d %H:%M:%S\")\n",
+      "print dt.strftime('%s') # wrong result\n",
+      "import calendar\n",
+      "print calendar.timegm(dt.utctimetuple())\n",
+      "```\n",
+      "Use the example from the pandas tutorial with the user defined date parser, but now convert the date to a unix time stamp."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "h5f.createArray(group_node, name, data, title=title)"
+      "def date_parser(date):\n",
+      "    # create a datetime instance and assume constant formatting\n",
+      "    # format: 20131211 18:29:30\n",
+      "    return datetime(int(date[:4]), int(date[4:6]), int(date[6:8]), int(date[9:11]), int(date[12:14]), int(date[15:17]))\n",
+      "df = pd.read_csv('gps.csv', header=0, skiprows=[1], parse_dates=[0], date_parser=date_parser)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.genfromtxt('gps.csv', converters={0: lambda d: float(s or 0)})"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = df.values[:,1:]\n",
+      "data = np.ones((10,1000))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 50
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "h5f.createArray(data_node, 'gpsdata', data, title='gps data')\n",
+      "h5f.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 49,
+       "text": [
+        "/data/gpsdata (Array(10, 1000)) 'gps data'\n",
+        "  atom := Float64Atom(shape=(), dflt=0.0)\n",
+        "  maindim := 0\n",
+        "  flavor := 'numpy'\n",
+        "  byteorder := 'little'\n",
+        "  chunkshape := None"
+       ]
+      }
+     ],
+     "prompt_number": 49
     },
     {
      "cell_type": "markdown",
@@ -203,14 +291,24 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "h5f = get_db(fpath)\n",
       "table = h5f.root.data.csv\n",
-      "row = csv_table.row\n",
-      "row['Time'] = "
+      "for row in df:\n",
+      "    row = csv_table.row\n",
+      "    row['Time'] = "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-31-c63fcbd397c6>, line 4)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-31-c63fcbd397c6>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    row['Time'] =\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -234,6 +332,51 @@
       "\n",
       "* "
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "date = '20131211 18:29:30'\n",
+      "dt = datetime.strptime(date, \"%Y%m%d %H:%M:%S\")\n",
+      "print dt.strftime('%s')\n",
+      "import calendar\n",
+      "print calendar.timegm(dt.utctimetuple())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2013 12 11 18 29 30\n",
+        "2013-12-11 18:29:30\n",
+        "1386782970\n",
+        "1386786570\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pandas as pd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
