h5py pip instruction

--- a/lesson 4/Simple data storage.ipynb
+++ b/lesson 4/Simple data storage.ipynb
@@ -639,7 +639,9 @@
       "\n",
       "<img src=\"files/HDF5view.png\">\n",
       "\n",
-      "In order to use HDF5 from python the module h5py (http://www.h5py.org/) is required (included in winpython, but not in anaconda)"
+      "In order to use HDF5 from python the module h5py (http://www.h5py.org/) is required (included in winpython, but not in anaconda)\n",
+      "\n",
+      "`pip install h5py`"
      ]
     },
     {
