added last minute changes

--- a/lesson 4/Data storage - pytables.ipynb
+++ b/lesson 4/Data storage - pytables.ipynb
@@ -34,10 +34,9 @@
       "* is not a replacement for a relational SQL database\n",
       "\n",
       "[Home page](http://www.pytables.org/moin)\n",
-      "\n",
       "[GitHub dev pages](https://github.com/PyTables/PyTables)\n",
-      "\n",
       "[Documentation](http://pytables.github.io/)\n",
+      "[Tutorial](http://pytables.github.io/usersguide/tutorials.html)\n",
       "\n",
       "A graphical interface to PyTables data sets exists at [ViTables](http://vitables.org/) (which also supports HDF5 files).\n",
       "\n",
@@ -48,15 +47,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from datetime import datetime\n",
       "import tables as tbl\n",
       "import pandas as pd\n",
-      "import numpy as np\n",
-      "from datetime import datetime"
+      "import numpy as np"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -82,7 +81,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -132,7 +131,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -161,7 +160,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -169,18 +168,19 @@
      "input": [
       "def get_table(group, table_name, descr=''):\n",
       "    try:\n",
-      "        table = getattr(h5f.root.group_name, table_name)\n",
+      "        table = getattr(group, table_name)\n",
       "    except tbl.exceptions.NoSuchNodeError:\n",
-      "        table = h5f.createTable(group, 'runs', TableDefs.WindTunnelTestRuns, descr)\n",
-      "        tbl_wt_runs.flush()\n",
+      "        table = h5f.createTable(group, table_name, TableDefs.data, descr)\n",
+      "        table.flush()\n",
       "    except Exception as exception:\n",
       "        h5f.close()\n",
-      "        raise exception"
+      "        raise exception\n",
+      "    return table"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -196,11 +196,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "empty h5file created: gps_db\n"
+        "h5file opened: gps_db\n"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -230,17 +230,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "np.genfromtxt('gps.csv', converters={0: lambda d: float(s or 0)})"
+      "#np.genfromtxt('gps.csv', converters={0: lambda d: float(s or 0)})"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -252,7 +253,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -263,22 +264,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 49,
-       "text": [
-        "/data/gpsdata (Array(10, 1000)) 'gps data'\n",
-        "  atom := Float64Atom(shape=(), dflt=0.0)\n",
-        "  maindim := 0\n",
-        "  flavor := 'numpy'\n",
-        "  byteorder := 'little'\n",
-        "  chunkshape := None"
-       ]
-      }
-     ],
-     "prompt_number": 49
+     "outputs": [],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -291,34 +278,32 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "table = h5f.root.data.csv\n",
-      "for row in df:\n",
-      "    row = csv_table.row\n",
-      "    row['Time'] = "
+      "#table = h5f.root.data.csv\n",
+      "csv_table = get_table(h5f.root.data, 'csv')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-31-c63fcbd397c6>, line 4)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-31-c63fcbd397c6>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    row['Time'] =\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-       ]
-      }
-     ],
-     "prompt_number": 31
+     "outputs": [],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "row = tbl_wt_runs.row"
+      "tablerow = csv_table.row\n",
+      "for dfrow in df.values:\n",
+      "    #tablerow['Time'] = dfrow[0]\n",
+      "    tablerow['Latitude_N'] = float(dfrow[1])\n",
+      "    tablerow['Longitude_E'] = float(dfrow[2])\n",
+      "    tablerow['orientation'] = float(dfrow[3])\n",
+      "    tablerow.append()\n",
+      "csv_table.flush()\n",
+      "h5f.close()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -326,11 +311,11 @@
      "source": [
       "Example: [store DataFrame in PyTables](http://pandas.pydata.org/pandas-docs/stable/api.html?highlight=pytables#hdfstore-pytables-hdf5)\n",
       "\n",
-      "Excercise:\n",
+      "### Excercise:\n",
       "\n",
       "* benchmark: how fast is storing with the hdfstore, compared to native pytables and all the other examples we have seen\n",
       "\n",
-      "* "
+      "* Assume you have a huge CSV file that is too big load into memory. Store it safely in a PyTables table."
      ]
     },
     {
@@ -350,33 +335,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2013 12 11 18 29 30\n",
-        "2013-12-11 18:29:30\n",
         "1386782970\n",
         "1386786570\n"
        ]
       }
      ],
-     "prompt_number": 14
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import pandas as pd"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 21
     }
    ],
    "metadata": {}
