Adding matplotlib requirements

--- a/lesson 5/rozenbrock.ipynb
+++ b/lesson 5/rozenbrock.ipynb
@@ -27,7 +27,9 @@
       "        NEWSUMTdriver, SLSQPdriver, Genetic\n",
       "    \n",
       "import os.path as path\n",
-      "import pandas as pd"
+      "import pandas as pd\n",
+      "\n",
+      "%matplotlib inline"
      ],
      "language": "python",
      "metadata": {
@@ -35,16 +37,8 @@
        "slide_type": "slide"
       }
      },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      }
-     ],
-     "prompt_number": 48
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
