added some fortran notes to lesson 7 documenting with sphinx

--- a/lesson 7/documentation-with-sphinx.ipynb
+++ b/lesson 7/documentation-with-sphinx.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f9840f8981b95ed90c130bab6534919d94748a9ced8719853feb7da6b3bf8fe7"
+  "signature": "sha256:4b5674e6ba455b677c9c4643a5171aae43c1b66065c0596eb0bd7546b20d0b27"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -146,6 +146,22 @@
     },
     {
      "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Sphinx for Fortran"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* https://github.com/TRACMASS/sphinx-fortran-extension\n",
+      "* http://www.ifremer.fr/vacumm/user.desc.fdoc.html"
+     ]
+    },
+    {
+     "cell_type": "heading",
      "level": 1,
      "metadata": {},
      "source": [
@@ -168,17 +184,20 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {
-      "run_control": {
-       "breakpoint": false,
-       "state": "n"
-      }
-     },
-     "outputs": []
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Other documentation tools"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Doxygen, supports more languages:\n",
+      "* http://www.stack.nl/~dimitri/doxygen/ https://github.com/doxygen/doxygen"
+     ]
     }
    ],
    "metadata": {}
